# simpleformer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: sandbox.ipynb
simpleformer/: simple_train.py
simpleformer/encoder/: pos.py
simpleformer/transformers/: common_layer.py  swin_transformer.py  vanila_transformer.py  vit.py
src/encoder/: __init__.py  pos.py
src/transformers/: common_layer.py  swin_transformer.py  vanila_transformer.py  vit.py
