[tool.poetry]
name = "simpleformer"
version = "0.1.0"
description = "Simple transformers"
authors = ["Jwoops <sanice1229@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
simpleformer = "src:main"
